# gitlab-mr-api

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  app.py  config.py  db.py  db_migrate.py  gitlab_model.py  periodic_cleanup.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.sh
.github/workflows/: ci.yml  release.yml
cards/: merge_request.json.j2  merge_request.yaml.j2  render.py
db/: schema.sql
db/migrations/: 00000000000000_initial.sql  20250121000000_add_webhook_fingerprint_table.sql  20250121010000_refactor_fingerprint_to_message_ref.sql  20251210000000_add_last_processed_updated_at.sql
docs/: workflow.md
tests/: README.md  conftest.py  test_card_render.py  test_database_helpers.py  test_db_migrate.py  test_db_migrate_e2e.py  test_e2e_bug_validation.py  test_e2e_database_operations.py  test_e2e_race_conditions.py  test_e2e_webhook_flow.py  test_integration_webhook_flow.py  test_merge_request_deletion.py  test_merge_request_handler.py  test_message_operations.py  test_messaging.py  test_mr_state_transitions.py  test_participant_filtering.py  test_periodic_cleanup.py  test_webhook_handlers.py
webhook/: __init__.py  emoji.py  merge_request.py  messaging.py  pipeline.py
